# histogram

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  README.tpl  cbindgen.toml
cpp/: histo_test.cpp  histogram.h
examples/: dump.rs  histo.rs  randhisto.rs  sizedata.rs
src/: ffi.rs  lib.rs
